data/derived/fa15/progs/unify/prog0176.ml.out
Characters 48-56:
  n mod 10;;
  ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
